-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8
-
Component/s: client-libs
-
b61
-
generic
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8018984 | 7u45 | Alexandr Scherbatiy | P3 | Closed | Fixed | b01 |
| JDK-8000359 | 7u40 | Alexandr Scherbatiy | P3 | Resolved | Fixed | b01 |
Now only virtual key code is used for the dead key detection on Windows.
This does not cover cases where key modifiers are used for the dead key.
For example the Ctrl+Alt+2 (or AltGr+2) key combination is used for the Caron dead key in the Hungarian keyboard.
This does not cover cases where key modifiers are used for the dead key.
For example the Ctrl+Alt+2 (or AltGr+2) key combination is used for the Caron dead key in the Hungarian keyboard.
- backported by
-
JDK-8000359 Using modifiers for the dead key detection on Windows
-
- Resolved
-
-
JDK-8002050 Using modifiers for the dead key detection on Windows
-
- Closed
-
-
JDK-8018984 Using modifiers for the dead key detection on Windows
-
- Closed
-
- relates to
-
JDK-8025649 [TEST] need test to cover JDK-8000423
-
- Resolved
-
-
JDK-8013849 Awt assert on Hashtable.cpp:124
-
- Resolved
-
-
JDK-7155378 Need utils api/field which determines the dead key
-
- Resolved
-
(1 relates to)