7197619: Using modifiers for the dead key detection on Windows

Reviewed-by: bagiras, leonidr